--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ body { font-family: system-ui, -apple-system, sans-serif; }
 @media print { body { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; } }
 .hero { position: relative; min-height: 120px; display: flex; align-items: center; justify-content: center; color: white; padding: 1.5rem 3rem; }
 .hero-section-wrapper { width: 100%; }
-.hero-container { max-width: 72rem; margin: 0 auto; padding: 1.5rem; border-radius: 0.75rem; box-shadow: 0 4px 6px rgba(0,0,0,0.1); background: transparent; }
-.hero-container .hero { margin: 0; border-radius: 0.5rem; }
+.hero-container { max-width: 72rem; margin: 0 auto; padding: 1.5rem; background: transparent; }
+.hero-container .hero { margin: 0; }
 .hero-content { position: relative; z-index: 10; text-align: center; max-width: 56rem; }
 .hero-badge { display: inline-block; padding: 0.5rem 1rem; background: rgba(255,255,255,0.2); backdrop-filter: blur(8px); border-radius: 9999px; margin-bottom: 1rem; }
 .hero-title { font-weight: 700; margin-bottom: 1rem; }
@@ -102,7 +102,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 </head>
 <body>
-<div style="width: 100%; background-color:rgba(3, 0, 10, 0.45); padding: 3rem;">
+<div style="width: 100%; background-color:rgba(255, 255, 255, 0.53); padding: 3rem;">
 <div class="hero-container">
 <div class="hero" style="background-color:rgba(116, 99, 235, 0.84);">
 <div class="hero-content">
