--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body { font-family: system-ui, -apple-system, sans-serif; }
 @media print { .summary { padding: 1.5rem !important; margin: 0.5rem 0 0 0 !important; } }
 @media print { .print-button { display: none !important; } }
 .hero { position: relative; min-height: 120px; display: flex; align-items: center; justify-content: center; color: white; padding: 1.5rem 3rem; border-radius: 0.75rem; }
-.hero-section-wrapper { width: 100%; }
+.hero-section-wrapper { width: 100%; padding: 3rem; }
 .hero-container { max-width: 72rem; margin: 0 auto; padding: 1.5rem; background: transparent; }
 .hero-container .hero { margin: 0; }
 .hero-content { position: relative; z-index: 10; text-align: center; max-width: 56rem; }
@@ -119,6 +119,8 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 </head>
 <body>
+<div class="hero-section-wrapper" style="background-color:rgba(255, 255, 255, 0.57); padding: 3rem;">
+<div class="hero-container">
 <div class="hero" style="background-color:rgba(116, 99, 235, 0.84);">
 <div class="hero-content">
 <span class="hero-badge" style="color:#ffffff; font-size:14px">This analysis is based on 391 student responses collected from the Office of Accessibility Resources and Services (OARS) Registration Form</span>
@@ -130,7 +132,9 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 </div>
 </div>
-<div class="key-findings-section" style="background-color:rgba(249, 250, 251, 0.52);">
+</div>
+</div>
+<div class="key-findings-section" style="background-color:rgba(249, 250, 251, 0.48);">
 <div class="key-findings-inner">
 <h2 class="key-findings-title" style="color:#ffffff; font-size:40px">Key Findings</h2>
 <div class="cards-grid cards-grid-3">
